refactor: BusinessException 도입 및 전역 예외 처리 테스트 작성
Signed-off-by: TreeBomb-01 <htb010630@gmail.com>